--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <a href="LR13/index.html" class="link-card wikipedia">
                 <span class="icon">LR13-14</span>
             </a>
+            <a href="LR15-20-GitHub/index.html" class="link-card github">
+                <span class="icon">LR15-20</span>
+            </a>
         </div>
     </div>
 </body>
